--- a/localisation/ideas_l_spanish.yml
+++ b/localisation/ideas_l_spanish.yml
@@ -1603,7 +1603,7 @@
  ARG_manuel_maria_de_iriondo:0 "Manuel Maria de Iriondo"
  ARG_manuel_antonio_fresco:0 "Manuel Antonio Fresco"
  ARG_carlos_ibarguren:0 "Carlos Ibarguren"
- ARG_leopoldo_melo:0 "Leopoldo Melo"
+ ARG_enzo_bordabehere:0 "Enzo Bordabehere"
  ARG_juan_domingo_peron:0 "Juan Domingo Peron"
  ARG_fm:0 "Dirección General de Fabricaciones Militares"
  ARG_fm_desc:0 "Fabricaciones Militares Sociedad del Estado es un organismo estatal argentino que depende del Ministerio de Defensa de la Nación y fue creado por la Ley N.º 12 709 del 9 de octubre de 1941. Sus propósitos principales están enfocados en abastecer de material bélico y logístico a las Fuerzas Armadas y Fuerzas de Seguridad; en organizar y producir líneas de insumos para su comercialización como productos finales o como insumos críticos destinados a diversas actividades productivas; y en prestar servicios que contribuyan al desenvolvimiento económico e industrial del país."
@@ -1613,9 +1613,6 @@
  ARG_fm_material_desc:0 "Fabricaciones Militares Sociedad del Estado es un organismo estatal argentino que depende del Ministerio de Defensa de la Nación y fue creado por la Ley N.º 12 709 del 9 de octubre de 1941. Sus propósitos principales están enfocados en abastecer de material bélico y logístico a las Fuerzas Armadas y Fuerzas de Seguridad; en organizar y producir líneas de insumos para su comercialización como productos finales o como insumos críticos destinados a diversas actividades productivas; y en prestar servicios que contribuyan al desenvolvimiento económico e industrial del país."
  ARG_ypf:0 "Yacimientos Petrolíferos Fiscales"
  ARG_ypf_desc:0 "YPF S. A. (anteriormente Yacimientos Petrolíferos Fiscales S. A.) es una empresa argentina de energía dedicada a la exploración, explotación, destilación, distribución y producción de energía eléctrica, gas, petróleo y derivados de los hidrocarburos y venta de combustibles, lubricantes, fertilizantes, plásticos y otros productos relacionados con la industria. La compañía tiene una composición societaria mixta, en la que el Estado argentino posee el 51 % de las acciones y el 49 % restante cotiza en la Bolsa de Buenos Aires y Nueva York. Fue fundada como empresa estatal en 1922, durante la presidencia de Hipólito Yrigoyen, convirtiéndose en la primera gran petrolera verticalmente integrada del mundo. Su ideólogo y primer director fue el coronel Enrique Mosconi."
- ARG_fapesa:0 "FAPESA"
- ARG_UIA:0 "UIA"
- ARG_fundiciones_santini:0 "Fundiciones Santini"
  ARG_invested_in_the_mining_industry:0 "Invirtió en la Industria Mineria"
  ARG_inflation_1:0 "Inflación muy mínima"
  ARG_inflation_1_desc:0 "Nuestra Inflación se ha estabilizado hasta un punto en el que sus efectos negativos son insignificantes. Si seguimos como hasta ahora, podremos deshacernos por completo de esta plaga que es la inflación."
@@ -1664,6 +1661,12 @@
  SAU_cost_25_command_blocked:0 "£pol_power  §R50§!  £command_power  §R25§!  £army_experience  §R10§!"
  SAU_cost_45_command:0 "£pol_power  §Y80§!  £command_power  §Y45§!  £army_experience  §Y20§!"
  SAU_cost_45_command_blocked:0 "£pol_power  §R80§!  £command_power  §R45§!  £army_experience  §R20§!"
+ CHL_cost_15_cp:0 "£command_power  §Y15§!"
+ CHL_cost_15_cp_blocked:0 "£command_power  §R15§!"
+ CHL_cost_man_and_pol:0 "£pol_power  §Y50§!  £manpower_texticon  §Y2500§!"
+ CHL_cost_man_and_pol_blocked:0 "£pol_power  §R50§!  £manpower_texticon  §R2500§!"
+ CHL_manpower_1000_tt:0 "£manpower_texticon  §Y1000§!"
+ CHL_manpower_1000_tt_blocked:0 "£manpower_texticon  §R1000§!"
  SAU_conscription_in_progress:0 "Tiene un esfuerzo de reclutamiento en curso"
  SAU_create_weak_unit_tt:0 "Crea un regimiento de milicia §Ypobremente entrenado§! con §G3§! §YBatallones de infantería§!"
  SAU_create_militia_unit_tt:0 "Crea un regimiento de milicia con §G5§! §YBatallones de infantería§! y §G1§! §YBatallón de artillería de apoyo§!"
@@ -1736,7 +1739,7 @@
  BRA_moreira_lima:0 "Moreira Lima"
  CHL_generic_fascist_demagogue:0 "Misael Galleguillos"
  CHL_generic_democratic_reformer:0 "Antonio J. Rios Morales"
- CHL_generic_communist_revolutionary:0 "Augustin Edwards"
+ CHL_generic_communist_revolutionary:0 "Pedro Aguirre Cerda"
  CHL_gustavo_ross_santa_maria:0 "Gustavo Ross Santa Maria"
  CHL_miguel_cruchaga_tacomal:0 "Miguel Cruchaga Tacomal"
  CHL_luis_alamos_barros:0 "Luis Alamos Barros"
@@ -1754,6 +1757,13 @@
  CHL_carlos_fuentes_rabe:0 "Carlos Fuentes Rabe"
  CHL_dario_cellejas_rojas:0 "Dario Cellejas Rojas"
  CHL_ariosto_herrera:0 "Ariosto Herrera"
+ CHL_communists_political_power:0 "Cooperación política comunista"
+ CHL_communists_political_power_desc:0 "Debido a las demandas bastante intensas de los comunistas, éstos han decidido ofrecer a nuestro gobierno una ayuda temporal."
+ CHL_welfare_plans:0 "Planes de bienestar"
+ CHL_political_instability_idea:0 "Inestabilidad política"
+ CHL_political_instability_idea_desc:0 "El espectro político actual en Chile es todo menos bonito. El Gobierno, los comunistas y los nacistas están en un constante tira y afloja político, y la nación entera está dividida en tres partes. Esta división está perjudicando gravemente a la nación, y si continúa más, la nación de Chile puede muy bien estar en serios problemas."
+
+
  COL_generic_fascist_demagogue:0 "Julio Valdez"
  COL_generic_democratic_reformer:0 "Ulpiano Rengifo Cárdenas"
  COL_generic_communist_revolutionary:0 "Leon de Greiff"
@@ -2319,7 +2329,6 @@
  URG_emilio_frugoni:0 "Emilio Frugoni"
  URG_horacio_arredondo:0 "Horacio Arredondo"
  URG_pedro_manini_rios:0 "Pedro Manini Rios"
- URG_alfredo_navarro:0 "Alfredo Navarro"
  URG_vittorio_amato_masso:0 "Julio Roletti"
  URG_ernesto_sanchez_elizondo:0 "Cesáreo L. Berisso"
  URG_hector_lopez_camara:0 "Alberto Mañe"
@@ -2331,7 +2340,7 @@
  URG_jorge_eloi_mendoza:0 "Domingo Mendivil"
  URG_cantido_quintio_reyes:0 "Andrés Puyol"
  URG_enrico_amancias_rodriguez:0 "Alfredo Baldomir"
- URG_oscar_diego_gestido:0 "Oscar Diego Gestido"
+ URG_manuel_heinz_azpurua:0 "Manuel Heinz Azpurua"
  URG_a_martin_de_la_flores:0 "Esteban Cristi"
  URG_carlos_neves_ochoa:0 "Federico García"
  URG_rafael_marques_ayala:0 "Francisco Jovellanos"
@@ -3055,13 +3064,8 @@
  URG_safu:0 "Sociedad Anónima Fabril Uruguaya"
  URG_ute:0 "Usinas y Trasmisiones Eléctricas"
  URG_ute_desc:0 "La Administración Nacional de Usinas y Trasmisiones Eléctricas,​ más conocida por sus siglas UTE, es la compañía estatal de producción y abastecimiento de energía eléctrica de Uruguay. Fue creada el 21 de octubre de 1912, cuando se promulgó una ley que dio origen a esta empresa pública,​ en el marco del impulso reformista y de modernización de los sucesivos gobiernos batllistas."
- URG_SRCA:0 "SRCA"
- URG_SRCA_desc:0 "The Servicio de Construcciones, Reparaciones y Armamento es la rama de la armada encargada de la construccion y el mantenimiento de los buques nacionales. Tambien maneja los astilleros nacionales."
- URG_ancap_trait:0 "Compañía Estatal"
- URG_escuela_militar_aeronautica:0 "Escuela Militar de Aeronáutica"
- URG_PASMA:0 "PESMA"
- URG_CIACA:0 "CIACA"
- URG_Ford:0 "Ford Uruguay" 
+ URG_aserradero_oriental:0 "Aserradero Oriental"
+ URG_ancap_trait:0 "Compañía Estatal" 
  
  
  # Bolivia
@@ -3140,8 +3144,8 @@
  PRU_purchasing_16:0 "Pagar por Anti-Aire"
  PRU_purchasing_17:0 "Pagando por Anti-Tanques" 
  PRU_purchasing_18:0 "Pagar por Convoys"
- PRU_purchasing_arica:0 "Pagando por Arica"
- CHL_purchasing_arica:0 "Perú pagando por Arica"
+ PRU_purchasing_arica:0 "Pagando por Tierra"
+ CHL_purchasing_arica:0 "Siendo Pagado por Tierra"
  PRU_preparing_for_the_worst:0 "Prepararse para lo peor"
  PRU_preparing_for_the_worst_desc:0 "A medida que las naciones del mundo vuelven a su pasatiempo favorito de matarse unos a otros, debemos asegurarnos de no ser las víctimas de estos conflictos."
  PRU_pokimane_fart:0 "Rescates para la economía"
@@ -3225,6 +3229,7 @@
  PRU_increase_social_spending_2:0 "Aumentar el gasto social"
  PRU_left_and_right_united_idea:0 "La izquierda y la derecha unidas"
  PRU_left_and_right_united_idea_2:0 "La izquierda y la derecha unidas"
+ PRU_left_and_right_united_idea_3:0 "La izquierda y la derecha unidas"
  PRU_neutralidad_peruana:0 "Neutralidad Peruana"
  PRU_aftermath_of_coup:0 "Resacas del Golpe de Estado"
  is_in_second_war_of_confederation:0 "Esta en la Segunda Guerra de la Confederación"
@@ -3244,9 +3249,8 @@
 
  BOL_sea_access_loss:0 "Pérdida de acceso al mar"
  BOL_sea_access_loss_desc:0 "Tras perder la guerra del pacífico, perdimos nuestro acceso al mar. Desde ese día, nuestro pueblo y nuestra economía han sufrido enormemente por ello. Si algún día conseguimos una salida al mar, ¡nuestro pueblo levantará la bandera boliviana con orgullo y nacionalismo! \n\n§REl control de cualquier estado costero acabará con este espíritu nacional§!."
-
- # Colombia
-
+ 
+ # Colombia 
  COL_politicised_army:0 "Ejército politizado"
  COL_politicised_army_desc:0 "Durante gran parte de la historia de Colombia, los gobernantes conservadores han usado las fuerzas armadas como su ejército privado. La cúpula militar se ha conformado casi exclusivamente de generales conservadores, excluyendo a los liberales de cualquier participación. No obstante, ahora que la hegemonía conservadora parece estar llegando a su fin, deberíamos preguntarnos si el ejército seguirá siendo una fuerza política o si se conventirá en una organización que defienda a todos los colombianos."
  COL_politicised_army_instant_desc:0 "\n§RMantener politizado el ejército hará posible una insurrección militar.§!"
@@ -3255,6 +3259,7 @@
  COL_oposicion:0 "Oposición política interna"
  COL_oposicion_instant_desc:0 "\n§RMantener la oposición política hará posible una insurrección conservadora o liberal, dependiendo cual de los dos gobierne.§!"
  COL_revolucion_en_marcha:0 "Revolución en Marcha"
+ COL_gaitan_desc:0 "Miembro de la disidencia liberal, Gaitán es la figura política que concentra los deseos del pueblo con su excelente oratoria. Su imagen es extremadamente popular, amada y enaltecida por muchos, lo que le ha valido su título como 'Tribuno del Pueblo'."
  gaitan_tt:0 "Velocidad de crecimiento de la §Yinfluencia subversiva liberal§!: §R+15%§!"
  COL_heridas:0 "Heridas de guerra"
  COL_heridas_desc:0 "Las constantes guerras civiles que ha enfrentado Colombia a lo largo de su historia la han marcado como una nación tendiente al tradicionalismo militar. La guerra es algo tan común para los colombianos que el gobierno ha gastado gran parte de sus recursos en el material bélico. El pueblo, por el contrario, se ha criado entre los combates, y lucharán hasta la muerte por los ideales que profesan."
@@ -3287,6 +3292,7 @@
  COL_private:0 "Institutos privatizados"
  COL_excavaciones:0 "Excavaciones profundas"
  COL_a_la_carga:0 "¡A la Carga!"
+ COL_a_la_carga_desc:0 "Pueblo, por la restauración moral ¡A la carga!\nPueblo, por la derrota de la oligarquía ¡A la carga!\nPueblo, por vuesta victoria ¡A la carga!"
  COL_refugio:0 "Refugio de Intelectuales"
  COL_ejercito_popular:0 "Ejército Popular"
  COL_cruzada:0 "Cruzada por la Restauración"
@@ -3330,6 +3336,7 @@
  COL_libertad_orden:0 "Libertad y Orden"
  COL_latin_new_deal:0 "El New Deal latinoamericano"
  COL_gran_pausa:0 "La Gran Pausa"
+ COL_gran_pausa_desc:0 "La Gran Pausa es el nombre que le dio Eduardo Santos a su gobierno. Aboga por detener paulatinamente las reformas sociales para evitar una súbita inestabilidad interna."
  COL_apropiacion_de_la_banca:0 "Apropiación de la banca"
  COL_los_chulavitas:0 "Los Chulavitas"
  COL_republica_apostolica:0 "La república apostólica"
@@ -3349,11 +3356,22 @@
  COL_tratado_colombo_americano:0 "Tratado de asistencia colombo-americano"
  COL_tratado_colombo_americano_desc:0 "Por disposición de este tratado, Estados Unidos apoyará indirectamente las guerras que esté librando Colombia."
  COL_usa_influence:0 "Influencia estadounidense"
- COL_influencia_militar:0 "Influencia militarista"
+ COL_influencia_militarista:0 "Influencia militarista"
  COL_estado_mayor:0 "Estado mayor de la República"
  COL_doctrina_prusiana:0 "Honrar la doctrina prusiana"
  COL_ejercito_nacional:0 "Ejército nacional"
  COL_sociedad_marcial:0 "Sociedad marcial"
+ COL_estado_laico:0 "Estado laico"
+ COL_america_liberada:0 "América liberada"
+ COL_martires_guerra_colombo_peruana:0 "Mártires de la guerra Colombo-Peruana"
+ COL_compromiso_obrero:0 "El compromiso obrero"
+ compromiso_obrero_tt:0 "Velocidad de crecimiento de la §Yinfluencia subversiva liberal§!: §R+35%§!"
+ COL_republica_cristiana:0 "La república cristiana"
+ COL_ministerio_guerra:0 "Ministerio de Guerra"
+ COL_legion_ricaurte:0 "La Legión Ricaurte"
+ COL_salario_obrero:0 "Salario obrero mejorado"
+ COL_politicos_exiliados:0 "Políticos en el exilio"
+ COL_politicos_exiliados_desc:0 "Tras el golpe de estado militarista de Vásquez Cobo en Colombia, varios políticos y funcionarios del Estado tuvieron que partir al exilio. Ahora han ofrecido su conocimiento del orden interno del país para ayudarnos a derrocar el régimen militar."
 
  col_cat_dominante_idea:0 "Católicos£col_cat dominantes"
  col_cat_influyente_idea:0 "Católicos£col_cat influyentes"
@@ -3368,55 +3386,3 @@
  tragedy_tt:0 " Murió en la tragedia de Fúquene"
 
  conf_inter_final:0 "Conferencia Interamericana"
- 
- # Venezuela
-
- VEN_generic_fascist_demagogue:0 "Adolfo Melgarejo"
- VEN_generic_democratic_reformer:0 "Romulo Betancourt"
- VEN_mariano_picon_salas:0 "Mariano Picón Salas"
- VEN_isaias_medina_angarita:0 "Isaias Medina Angarita"
- VEN_carlos_delgado:0 "Carlos Delgado"
- VEN_rodolfo_quintero:0 "Rodolfo Quintero"
- VEN_arnold_margerie:0 "Arnold Margerie"
- VEN_tomas_contreras_villalobos:0 "Tomas Contreras Villalobos"
- VEN_david_lopez_henriques:0 "David Lopez Henriques"
- VEN_miguel_diaz_fraile:0 "Miguel Díaz Fraile"
- VEN_humberto_santabria_villa:0 "Humberto Santabria Villa"
- VEN_carlos_molina_talavayo:0 "Carlos Molina Talavayo"
- VEN_victor_sanchez_croes:0 "Victor Sanchez Croes"
- VEN_carlos_delgado_chalbaud:0 "Carlos Delgado Chalbaud"
- VEN_roberto_de_luca_varesano:0 "Roberto de Luca Varesano"
- VEN_carlos_ramos_diaz:0 "Carlos Ramos Díaz"
- VEN_carlos_garcia_mendoza:0 "Carlos Garcia Mendoza"
- VEN_antonio_casas_gonzalez:0 "Antonio Casas Gonzalez"
- VEN_jose_polares_pavon:0 "José Polares Pavon"
-
- # Nicaragua
- nic_rebellious_army:0 "Rebelión en el Ejército"
-
- # Central America
- central_banana_republic:0 "Republica Bananera"
- central_banana_republic_desc:0 "En ciencias políticas, el término república bananera describe un país políticamente inestable con una economía que depende de la exportación de de recursos limitados, como bananas o minerales."
- central_banana_republic_cooperate:0 "Cooperando con las Compañías de Fruta"
- central_banana_republic_cooperate_desc:0 "Este gobierno ha comenzado a hacer concesiones a las empresas frutícolas, aunque eso conlleve sacrificar las libertades y los derechos civiles. Como resultado, esta acción ha comenzado a agitar movimientos socialistas locales, que han comenzado a oponerse abiertamente al gobierno."
- central_banana_republic_cooperate2:0 "Suprimiendo las Uniones"
- central_banana_republic_cooperate2_desc:0 "Debido a las revueltas socialistas, este gobierno ha considerado necesario comenzar a prohibir todo tipo de sindicatos y uniones."
- central_banana_republic_i1:0 "Compañías Enfurecidas"
- central_banana_republic_i1:0 "Este gobierno ha comenzado a nacionalizar las tierras de las empresas frutícolas privadas. Si bien esta medida comenzará a cambiar la opinión público a favor del gobierno, las empresas influyentes harán todo lo posible para bloquear cualquier propuesta del gobierno."
- kicking_the_companies:0 "Destituyendo a las Compañías"
- kicking_the_companies_desc:0 "Las empresas frutícolas están siendo expulsadas de [Root.GetName]. Esto le ha obtenido al gobierno el apoyo de la gente, pero también ha enfurecido a las élites, que están utilizando sobornos y lagunas legales para causar tantos problemas al gobierno como sea posible."
- central_banana_republic_cooperate3:0 "Censurando a los Medios"
- central_banana_republic_cooperate3_desc:0 "En un esfuerzo por combatir el descontento en la población, este gobierno ha comenzado a cerrar estaciones de noticias independientes y ha empezado reemplazarlas por estaciones estatales."
- central_banana_republic_cooperate4:0 "Revolución Vencida"
- central_banana_republic_cooperate4_desc:0 "Debido a las vastas reformas antirrevolucionarias del gobierno, el [Root.GetCommunistParty] casi ha fracasado y se ha ido a la clandestinidad. Sin oposición restante, este gobierno ha comenzado a hacer todos los esfuerzos para convertir a [Root.GetName] en la corporatocracia perfecta."
- central_banana_republic_cooperate5:0 "Economía Bananera"
- central_banana_republic_cooperate5_desc:0 "Este gobierno se ha convertido en una corporatocracia, con la mayoría de los esfuerzos políticos siendo enfocados en asegurar la influencia y rentabilidad de las empresas frutícolas sobre el bienestar de la gente."
- central_industrial_independence:0 "Industria Independiente"
- central_banana_republic_i2:0 "Gran Influencia Empresarial"
- central_army_reform:0 "Reforma del Ejército"
- central_artillery_production:0 "Enfoque en Artillería"
- central_weapon_production:0 "Enfoque en Armas"
- central_improve_high_command_idea:0 "Alto Comando Mejorado"
- central_motorization_effort:0 "Enfoque en Vehículos"
- central_disbanded_army:0 "Ejército Abolido"
-
