--- a/localisation/traits_l_spanish.yml
+++ b/localisation/traits_l_spanish.yml
@@ -25,6 +25,13 @@
  PBC_socialist_tendencies_2:0 "Tendencias socialistas"
  PBC_fascist_tendencies:0 "Tendencias fascistas"
  PBC_democratic_tendencies:0 "Tendencias democráticas"
+ CHL_leader_of_the_people:0 "Lider de la Gente"
+ trait_CHL_fascist_sympathies:0 "Simpatizante del Fascismo"
+ trait_CHL_fascist_sympathies_desc:0 "Este líder simpatiza con el movimiento fascista y apoyará a los nacistas en caso de conflicto interno."
+ trait_CHL_communist_sympathies:0 "Simpatizante del Comunismo"
+ trait_CHL_communist_sympathies_desc:0 "Este líder simpatiza con el movimiento comunista y apoyará a los comunistas en caso de conflicto interno."
+ trait_CHL_loyalists:0 "Lealista"
+ trait_CHL_loyalists_desc:0 "Este líder es leal al actual gobierno democrático y apoyará a la democracia chilena en caso de guerra civil."
  COL_heroe_colombo_peruano:0 "Héroe de la guerra colombo-peruana"
  COL_monsignor_of_the_armies:0 "Monseñor de los ejércitos"
  COL_british_naval_attache:0 "Agregado naval británico"
@@ -32,14 +39,8 @@
  COL_proselito_del_duce:0 "Prosélito del Duce"
  COL_hombre_tempestad:0 "El Hombre Tempestad"
  COL_voice_of_the_people:0 "La voz del pueblo"
- COS_intellectual_dictator:0 "Dictador Intelectual"
- generic_army_connections:0 "Conexiones en el Ejército"
- URG_el_guerrillero:0 "El Guerrillero"
- generic_physician:0 "Medico"
- generic_lawyer:0 "Abogado"
- generic_judge:0 "Juez"
- generic_writer:0 "Escritor"
- 
+ COL_el_general:0 "El General"
+ COL_tribuno_del_pueblo:0 "Tribuno del pueblo"
 
  cc_leader:0 "General"
  fm_leader:0 "Mariscal de campo"
