--- a/localisation/traits_l_english.yml
+++ b/localisation/traits_l_english.yml
@@ -25,6 +25,13 @@
  PBC_socialist_tendencies_2:0 "Socialist Tendencies"
  PBC_fascist_tendencies:0 "Fascist Tendencies"
  PBC_democratic_tendencies:0 "Democratic Tendencies"
+ CHL_leader_of_the_people:0 "Leader of the People"
+ trait_CHL_fascist_sympathies:0 "Fascist Sympathizer"
+ trait_CHL_fascist_sympathies_desc:0 "This leader is sympathetic towards the Fascist movement and will support the Nacistas in the event of an internal conflict."
+ trait_CHL_communist_sympathies:0 "Communist Sympathizer"
+ trait_CHL_communist_sympathies_desc:0 "This leader is sympathetic towards the Communist movement and will support the Communists in the event of an internal conflict."
+ trait_CHL_loyalists:0 "Loyalist"
+ trait_CHL_loyalists_desc:0 "This leader is loyal to the current democratic government and will support Chilean democracy in the event of a civil war."
  COL_heroe_colombo_peruano:0 "Hero of the Colombia-Peru war"
  COL_monsignor_of_the_armies:0 "Monsignor of the armies"
  COL_british_naval_attache:0 "British Naval Attaché"
@@ -32,14 +39,8 @@
  COL_proselito_del_duce:0 "Proselyte of Il Duce"
  COL_hombre_tempestad:0 "Hombre Tempestad"
  COL_voice_of_the_people:0 "The voice of the people"
- COS_intellectual_dictator:0 "Intellectual Dictator"
- URG_el_guerrillero:0 "El Guerrillero"
- generic_army_connections:0 "Army Connections"
- generic_physician:0 "Physician"
- generic_lawyer:0 "Lawyer"
- generic_judge:0 "Judge"
- generic_writer:0 "Writer"
- 
+ COL_el_general:0 "El General"
+ COL_tribuno_del_pueblo:0 "Tribune of the people"
  
  cc_leader:0 "General"
  fm_leader:0 "Field Marshal"
