Central America WIP

--- a/localisation/parties_l_spanish.yml
+++ b/localisation/parties_l_spanish.yml
@@ -448,10 +448,10 @@
  GUA_democratic_party_long:0 "Frente Popular Libertador"
  GUA_communism_party:0 "PCCA"
  GUA_communism_party_long:0 "Partido Comunista de Centro América"
- GUA_fascism_party:0 "PNG"
- GUA_fascism_party_long:0 "Partido Nacionalsocialista de Guatemala"
- GUA_neutrality_party:0 "PLP"
- GUA_neutrality_party_long:0 "Partido Liberal Progresista"
+ GUA_fascism_party:0 "PLP"
+ GUA_fascism_party_long:0 "Partido Liberal Progresista"
+ GUA_neutrality_party:0 "PAR"
+ GUA_neutrality_party_long:0 "Partido Acción Revolucionaria"
  SIA_neutrality_party:0 "Khana Ratsadon"
  SIA_neutrality_party_long:0 "Khana Ratsadon"
  RG_neutrality_party:0 "Colorado"
