--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -651,12 +651,12 @@
  ELS:0 "El Salvador"
  ELS_DEF:0 "El Salvador"
  ELS_ADJ:0 "Salvadoran"
- GUA_fascism:0 "Guatemalan Corporate State"
- GUA_fascism_DEF:0 "Guatemalan Corporate State"
+ GUA_fascism:0 "Guatemala"
+ GUA_fascism_DEF:0 "Guatemalan"
  GUA_democratic:0 "Republic of Guatemala"
  GUA_democratic_DEF:0 "the Republic of Guatemala"
- GUA_neutrality:0 "Guatemala"
- GUA_neutrality_DEF:0 "Guatemala"
+ GUA_neutrality:0 "Republic of Guatemala"
+ GUA_neutrality_DEF:0 "the Republic of Guatemala"
  GUA_communism:0 "Union Guatemala"
  GUA_communism_DEF:0 "Union Guatemala"
  GUA_fascism_ADJ:0 "Guatemalan"
