--- a/localisation/traits_l_english.yml
+++ b/localisation/traits_l_english.yml
@@ -46,6 +46,15 @@
  BOL_father_of_the_falange:0 "Father of the Falange"
  EUYL_soldier_recruiter:0 "Soldier Recruiter"
  PBC_disorganized_nationalists:0 "Disorganized Nationalists"
+ COS_intellectual_dictator:0 "Intellectual Dictator"
+ URG_el_guerrillero:0 "El Guerrillero"
+ generic_army_connections:0 "Army Connections"
+ generic_physician:0 "Physician"
+ generic_lawyer:0 "Lawyer"
+ generic_judge:0 "Judge"
+ generic_writer:0 "Writer"
+ HON_strongman_of_tegucigalpa:0 "Strongman of Tegucigalpa"
+ ELS_theosophic_dictator:0 "Theosophic Dictator"
  
  cc_leader:0 "General"
  fm_leader:0 "Field Marshal"
