--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -1722,24 +1722,23 @@
  SLO_frantisek_straka:0 "Frantisek Straka"
  SLO_jindrich_honzl:0 "Jindrich Honzl"
  SLO_jozef_turanec:0 "Jozef Turanec"
- COS_generic_fascist_demagogue:0 "Calufa Fallas Sinaja"
- COS_generic_democratic_reformer:0 "Miguel Ramirez Alcantara"
- COS_generic_communist_revolutionary:0 "Gustaf Husak"
- COS_julio_acosta_garcia:0 "Julio Acosta Garcia"
- COS_otto_cortes_fernandez:0 "Otto Cortes Fernandez"
- COS_roberto_brenes_mesen:0 "Roberto Brenes Mesen"
- COS_chico_orlich_bolmarich:0 "Chico Orlich Bolmarich"
- COS_jose_figueres_ferrer:0 "Jose Figueres Ferrer"
- COS_luis_fernandez_rodriguez:0 "Luís Fernandéz Rodríguez"
- COS_tobias_picado_cortes:0 "Tobias Picado Cortes"
- COS_francisco_rosendo_arguello:0 "Francisco Rosendo Arguello"
- COS_guillermo_macho_nunez:0 "Guillermo Macho Nuñez"
- COS_carlos_uribe_alpoveda:0 "Carlos Uribé Alpoveda"
+ COS_jose_figueres_ferrer:0 "José Figueres Ferrer"
+ COS_juan_rafael_arias:0 "Juan Rafael Arias"
+ COS_roberto_brenes_mesen:0 "Roberto Brenes Mesén"
+ COS_solon_nunez_frutos:0 "Dr. Solón Nuñez Frutos"
+ COS_manuel_f_jimenez:0 "Manuel F. Jiménez"
+ COS_carmen_lyra:0 "Carmen Lyra"
+ COS_carlos_jimenez_ortiz:0 "Carlos Jiménez Ortiz"
+ COS_max_effinger:0 "Max Effinger"
+ COS_tobias_bolanos_palma:0 "Tobías Bolaños Palma"
+ COS_joaquin_zavaleta:0 "Joaquín Zavaleta"
+ COS_ricardo_fernandez_peralta:0 "Ricardo Fernández Peralta"
+ COS_francisco_marshall:0 "Francisco Marshall"
+ COS_jose_figueres_ferrer:0 "José Figueres Ferrer"
+ COS_manuel_guerra:0 "Manuel Guerra"
  COS_hugo_siedler_mendoza:0 "Hugo Siedler Mendoza"
- COS_hugo_montes_ramirez:0 "Hugo Montés Ramirez"
- COS_jorge_volio_jimenez:0 "Jorge Volio Jimenéz"
- COS_baptista_e_gutierrez:0 "Baptista E. Gutierrez"
- COS_manuel_mora_valverde:0 "Manuel Mora Valverde"
+ COS_hector_zuniga:0 "Héctor Zúñiga"
+ COS_amadeo_vargas:0 "Amadeo Vargas"
  COS_oscar_padilla_sellean:0 "Oscar Padilla Sellean"
  COS_roberto_juarez_camposino:0 "Roberto Juarez Camposino"
  COS_felipe_abreu_castro:0 "Felipe Abreu Castro"
@@ -3306,9 +3305,8 @@
 
  tragedy_tt:0 "He died in the tragedy of Fúquene"
 
-<<<<<<< Updated upstream
  conf_inter_final:0 "Inter-American Conference"
-=======
+ 
  # Central America
  central_banana_republic:0 "Banana Republic"
  central_banana_republic_desc:0 "In political science, the term banana republic describes a politically unstable country with an economy dependent upon the exportation of a limited-resource product, such as bananas or minerals."
@@ -3343,4 +3341,4 @@
  central_efficient_police:0 "Efficient Police Force"
  central_diplomatic_effort_idea:0 "Diplomatic Effort"
  central_pacifist_nation:0 "True Pacifism"
->>>>>>> Stashed changes
+ nic_rebellious_army:0 "Rebellious Army"
