--- a/localisation/replace/EUYL_victory_points_l_english.yml
+++ b/localisation/replace/EUYL_victory_points_l_english.yml
@@ -1063,7 +1063,7 @@
  VICTORY_POINTS_13277:0 "Salto" 
  VICTORY_POINTS_4457:0 "Colonia del Sacramento"
  VICTORY_POINTS_13271:0 "Melo"
- VICTORY_POINTS_13253:0 "Florida" 
+ VICTORY_POINTS_13250:0 "San José de Mayo" 
 
  #NUEVOS VP - CHILE
  VICTORY_POINTS_5121:0 "Temuco"
