--- a/localisation/replace/EUYL_lar_decisions_l_english.yml
+++ b/localisation/replace/EUYL_lar_decisions_l_english.yml
@@ -152,7 +152,12 @@
  URG_march_to_argentina_capital_desc:0 "Buenos Aires is the heart of the country, it is what keeps the nation afloat. If we are able to capture it in a short amount of time, then the Argentines will be shaterred and victory will be guranteed."
  URG_capture_buenos_aires:0 "Capture Buenos Aires"
  URG_capture_buenos_aires_desc:0 "The capital is in sight! One good offensive and it will be under our control in no time."
- 
+ URG_renovation_efforts:0 "Renovation Effort"
+ URG_renovate_cerro_fortress:0 "Renovate the Fortaleza del Cerro"
+ URG_renovate_san_miguel_fortress:0 "Renovate the Fortaleza de San Miguel"
+ URG_renovate_santa_teresa_fortress:0 "Renovate the Fortaleza de Santa Teresa"
+ URG_finish_renovations:0 "Finish the Renovations"
+
  CHL_purchasing_foreign_planes:0 "Purchasing Foreign Planes"
  CHL_purchasing_foreign_planes_desc:0 "There are many great powers out there who have very modern planes, and those are planes we would very much like to have in our arsenal. With such high quality aircraft at our disposal, our enemies will cower in fear!"
  CHL_purhcase_fighters_from_FROM:0 "Purchase Fighters From [FROM.GetNameDef]"
