--- a/localisation/replace/EUYL_tooltips_l_spanish.yml
+++ b/localisation/replace/EUYL_tooltips_l_spanish.yml
@@ -1,2 +1,7 @@
 ﻿l_spanish:
   URG_available_ancap:0 "§YANCAP§! estara disponible como una §YCompañía Industrial§!"
+  URG_renovation_in_progress:0 "Una fortaleza esta bajo renovación"
+  URG_cerro_renovated:0 "La Fortaleza del Cerro ha sido renovada"
+  URG_san_miguel_renovated:0 "La Fortaleza de San Miguel ha sido renovada"
+  URG_santa_teresa_renovated:0 "La Fortaleza de Santa Teresa ha sido renovada" 
+  URG_horacio_arredondo_tt:0 "Contratar a Arredondo permitira la renovación de viejos fuertes coloniales"      
